<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_tips_dialog"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/tv_tips_dialog_tips"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="40px"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/dialog_delete_warning"
        android:textColor="#ffffff"
        android:textSize="20sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/btn_tips_dialog_OK"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="top"
            android:background="@drawable/btn_tips_dialog"
            android:text="@string/activity_input_confirm"
            android:textColor="@color/btn_text_color"
            android:textSize="18sp" />

        <Button
            android:id="@+id/btn_tips_dialog_Cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="top"
            android:layout_marginLeft="35dp"
            android:background="@drawable/btn_tips_dialog"
            android:text="@string/activity_input_cancel"
            android:textColor="@color/btn_text_color"
            android:textSize="18sp" />
    </LinearLayout>

</LinearLayout>